Fix css syntax and prevent horizontal overflow

--- a/style.css
+++ b/style.css
@@ -64,7 +64,8 @@
   margin: 0;
 }
 html {
-  font-size: 62.5%
+  font-size: 62.5%;
+    overflow-x: hidden;
 }
 
 .cloudflare-debug {
